align h1, box contact

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr-wl">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,13 +17,13 @@
         
         <section class="form">
             <form action="">
-                    <label for="text"> Lastname and firstname</label>
+                    <label for="text"> Nom et Prénom</label>
                     <input type="text">    
                     <label for="email"> Email</label>
                     <input type="text">    
-                    <label for="number"> Phone Number</label>
+                    <label for="number"> Téléphone</label>
                     <input type="text">
-                    <label for="number"> Post Code</label>
+                    <label for="number"> Code postal</label>
                     <input type="text">
                     <input class="btn" type="submit" value="Je le veux !">
             </form>
